Logtalk/examples/errors/lgtredef.lgt

:- object(lgtredef).
		
	current_object(_).
	
:- end_object.
